--- a/clarion.html
+++ b/clarion.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header Section -->
-    <header style="background-color: #fc63db; color: #ffffff;" class="py-3">
+    <header style="background-color: #fc63db; color: #ffffff; position: sticky; top: 0; z-index: 1000;" class="py-3" >
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- <img src="images/skin5.jpg" class="card-img-top" alt="Skin Consultations" style="height: 30px; width: 30px; object-fit: cover;"> -->
